--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.4",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "next": "14.2.3",
