finished first draft!

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.4",
     "@popperjs/core": "^2.11.8",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "bootstrap": "^5.3.3",
     "next": "14.2.3",
     "react": "^18",
